# aiditor

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py  test_analyzer.py
backend/: main.py
examples/: be_delusional.md  be_delusional_analysis.json  be_delusional_approval.md  be_delusional_approved_prompts.json  sample_analysis.json
examples/be_delusional_generated/: stock_queries.md
frontend/: index.html  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: PencilLoader.tsx  Tabs.tsx
frontend/src/stages/: Stage1.tsx  Stage2.tsx  Stage3.tsx  Stage4.tsx
frontend/src/utils/: annotatedScript.ts
src/aiditor/: analyzer.py  approval.py  cli.py  loaders.py  models.py  shot_lister.py
src/aiditor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/aiditor/generators/: __init__.py  base.py  nano_banana.py  self_shot.py  stock.py  veo.py
src/aiditor/prompts/: analyzer_system.md  shot_lister_system.md
streamlit_output/be_delusional/: stock_queries.md
